# numeric-engine

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  about.cpp  about.h  about.ui  converter.cpp  converter.h  converter.ui  help.cpp  help.h  help.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  settings.cpp  settings.h  settings.ui
